# folitools

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  environment.yaml  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml
notebooks/: test.ipynb
rust/: Cargo.toml
rust/src/: add_tags.rs  lib.rs
scripts/: build_rust.sh  example.sh  hash_artifact.py  make-data-artifact.sh  precalc_primer3.py
src/folitools/: __init__.py  _add_tags_entry.py  add_tags.py  add_umi.py  calc_rest_stats.py  cli.py  get_matrix.py  primer_info.py  quality.py  summary.py  utils.py
src/folitools/batch_effect/: Combat_ref.R  NPmatch.R  combat.py  deseq2.py  helper_seq.R  normalize.log2CPM.R
src/folitools/masato/: diversity.py
src/folitools/primer_selection/: _01_primer_selection.py  _02_select_primer_set_by_saddle_loss.py  _02_select_primer_set_by_sgad.py  _03_extract_region_sequence.py  _04_make_excel.py  _05_recover.py  _versioning.py  cli.py  data_dir_resolve.py  data_fetch.py  eval_dimer.py  extract_region_sequence.py  make_excel.py  primer_pairing.py  primer_selection.py  recover_plot.py  recover_utils.py  saddle_loss.py  saddle_utils.py  select_primer_set_by_saddle_loss.py  utils.py
src/folitools/primer_selection/data/human/: 00.primer3_output.150_210.primer_info.parquet  00.primer3_output.150_210.transcript_metadata.parquet  00.primer3_output.320_380.primer_info.parquet  00.primer3_output.320_380.transcript_metadata.parquet  01.primer3_pass.150_210.primer_info.parquet  01.primer3_pass.150_210.transcript_metadata.parquet  01.primer3_pass.320_380.primer_info.parquet  01.primer3_pass.320_380.transcript_metadata.parquet  02.SADDLE_input.150_210.primer_0.parquet  02.SADDLE_input.150_210.transcript_metadata.parquet  02.SADDLE_input.320_380.primer_0.parquet  02.SADDLE_input.320_380.transcript_metadata.parquet
src/folitools/primer_selection/data/mouse/: 00.primer3_output.150_210.primer_info.parquet  00.primer3_output.150_210.transcript_metadata.parquet  00.primer3_output.320_380.primer_info.parquet  00.primer3_output.320_380.transcript_metadata.parquet  01.primer3_pass.150_210.primer_info.parquet  01.primer3_pass.150_210.transcript_metadata.parquet  01.primer3_pass.320_380.primer_info.parquet  01.primer3_pass.320_380.transcript_metadata.parquet  02.SADDLE_input.150_210.primer_0.parquet  02.SADDLE_input.150_210.transcript_metadata.parquet  02.SADDLE_input.320_380.primer_0.parquet  02.SADDLE_input.320_380.transcript_metadata.parquet  04.SADDLE_output.merge.toSubmit_150_210.parquet  04.SADDLE_output.merge.toSubmit_320_380.parquet
src/folitools/scripts/: foli_01_fastp.sh  foli_02_cutadapt.sh  foli_03_map.sh  foli_03_map_utils.py  foli_04_count.sh  utils.sh
tests/: __init__.py  conftest.py  test_384_primers.py  test_enhanced_matrix.py  test_function_return_types.py  test_idt_ordering.py  test_integration.sh  test_masato_diversity.py  test_multiple_pools.py  test_primer_versioning.py  test_return_types.py  test_shell_scripts.py  test_shell_utils.sh  test_shell_utils_simple.sh  test_summary_stats.py  test_unassigned_count_flow.py
tests/primer_selection/: __init__.py  test_eval_dimer.py  test_full_pipeline.py  test_gene_simplify.py  test_idt_order.xlsx  test_idt_ordering.py  test_pipeline_integration.py  test_recover.py  test_recover_cli.py  test_recover_small.py  test_recover_utils.py
tests/primer_selection/test_data/: mouse_genes.tsv
