[project]
name = "folitools"
version = "0.6.1"
description = "Foli-seq data processing and analysis tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.85",
    # cutadapt is pulled from our fork published on PyPI as
    # `cutadapt-folitools`. The fork installs the same `cutadapt` Python
    # module and `cutadapt` console script as upstream, but adds a
    # SeedMultiAdapterFilter that speeds up matching of non-anchored
    # multi-adapter groups (e.g. foli assign-probes with hundreds of
    # i5/i7 primers) while returning bit-identical Match objects. The
    # distinct distribution name is required because PyPI rejects direct
    # git+https URLs in Requires-Dist. Building the sdist requires a C
    # compiler (gcc, already listed in environment.yaml).
    "cutadapt-folitools>=5.3.1.post1",
    "cyclopts==3.22.5",
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "matplotlib-venn>=1.1.2",
    "natsort>=8.4.0",
    "networkx>=3.5",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "pysam>=0.23.3",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "sgad>=1.0.1",
    "tqdm>=4.67.1",
    "umi-tools>=1.1.6",
    "wcmatch>=10.1",
    "xopen>=2.0.2",
    "openpyxl",
    "primer3-py>=2.2.0",
    "pydeseq2>=0.5.3",
]

# --- uv dependency groups ---
[dependency-groups]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
notebook = [
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "ipywidgets>=8.1.7",
]

# Make tests available in local runs by default (useful for contributors)
[tool.uv]
default-groups = ["test"]
package = true

# --- keep pip extras for non-uv users ---
[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
notebook = [
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "ipywidgets>=8.1.7",
]

[project.scripts]
foli = "folitools.cli:app"
foli-primer = "folitools.primer_selection.cli:app"
# Rust-backed hot-path invoked by foli_03_map.sh. Implemented as a Python
# entry point that forwards argv into the compiled `folitools._rust_native`
# extension (source under rust/).
foli_add_tags = "folitools._add_tags_entry:cli"

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

# maturin ships the Python package + a compiled Rust extension
# (folitools._rust_native) as one wheel. The Rust source is under rust/;
# the extension is imported by src/folitools/_add_tags_entry.py to back
# the `foli_add_tags` console script.
[tool.maturin]
bindings = "pyo3"
manifest-path = "rust/Cargo.toml"
python-source = "src"
module-name = "folitools._rust_native"
features = ["python-extension"]
# maturin auto-includes LICENSE in the wheel and adds `License-File: LICENSE`
# to the metadata, but by default it does NOT put LICENSE inside the sdist.
# PyPI's metadata 2.4 check then rejects the sdist ("License-File LICENSE
# does not exist in distribution file"). Force-include it here.
include = [
    { path = "LICENSE", format = ["sdist", "wheel"] },
]
# primer_selection/data/** is large reference data; users fetch it on demand
# rather than bundling it into every wheel. c/** is legacy scratch.
exclude = [
    { path = "src/folitools/primer_selection/data/**", format = ["sdist", "wheel"] },
    { path = "c/**", format = ["sdist", "wheel"] },
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --tb=short --strict-markers -ra"
testpaths = ["tests"]
# keep as defaults: python_files, python_classes
# python_functions = ["test*"]      # allow testCamelCase
python_functions = ["test_*"]       # enforce underscore
xfail_strict = true

# Custom markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/folitools"]
branch = true
parallel = true
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = true
# fail_under = 85  # For enforcing a bar in CI 
exclude_lines = [
  "pragma: no cover",
  "^def __repr__",
  "^if self\\.debug:",
  "^if settings\\.DEBUG",
  "^raise AssertionError",
  "^raise NotImplementedError",
  "^if 0:",
  "^if __name__ == ['\\\"]__main__['\\\"]:$",
  "^\\s*class .*\\(Protocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
